# tDARIA

./: CMakeLists.txt  ExampleG4.cc  v.mac
include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  SensitiveDetector.hh  SteppingVerbose.hh
src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SensitiveDetector.cc  SteppingVerbose.cc
